--- a/src/app/graphic-design/graphic-design.component.html
+++ b/src/app/graphic-design/graphic-design.component.html
@@ -4,19 +4,19 @@
 
 <div class="simple-article-header">
   <!-- Article Published Date & Reading Time -->
-  <p class="article-date-read">Published on: 21 April, 2017 - 3 min read</p>
+  <p class="article-date-read"></p>
   
   <!-- Article Title -->
   <h4 class="article-title">
     <a href="#">
-      20 Best PHP Blogs You Must Follow
+      
     </a>
   </h4>
 
   <!-- Article Author Name & Comment Hyperlink -->
   <p class="article-author-comments">
-    <em>by <a href="#">Harry Manchanda</a></em> -
-    <a class="article-comments" href="#">3 Comments</a>
+    <em>by <a href="#">Michael Rodriguez</a></em> -
+    <a class="article-comments" href="#">25 Comments</a>
   </p>
 
   <!-- Article Social Links -->
@@ -38,15 +38,19 @@
   <!-- Article Image -->
   <div class="article-post-image">
     <div class="thumbnail">
-      <img src="https://i.imgur.com/22ue2CP.jpg">
+      <img src="https://images.procreate.art/adminBucket/0F381FE8-2EEB-8AB8-491B-8E10B7AB01A6.jpg">
+    </div>
+  </div>
+  <!-- Article video -->
+  <div class="article-post-image">
+    <div class="thumbnail">
+      <img src="<iframe width="560" height="315" src="https://www.youtube.com/embed/K9zdrwIm2uU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>">
     </div>
   </div>
 
   <!-- Article Post Content -->
   <div class="article-post-content">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, quod, mollitia! Ex sed magni veritatis pariatur facere hic necessitatibus aperiam. Necessitatibus doloribus molestias velit sequi expedita laudantium odio sunt nam ratione quibusdam animi consequatur vero quam eligendi veritatis voluptatum excepturi similique perferendis, suscipit facilis itaque, cum totam quasi. Corporis quis beatae neque tenetur, ullam quisquam itaque reprehenderit amet, provident praesentium ab velit laudantium debitis enim dignissimos iure magnam voluptatum! Reiciendis aut adipisci accusantium harum ratione quaerat maxime, cum non provident dolores. Unde id quod aliquam esse officia tenetur assumenda veniam deserunt consequuntur doloremque ducimus perferendis accusamus in dolorem animi magni, quisquam fugiat quasi quaerat voluptate repellendus molestiae excepturi blanditiis. Rerum excepturi quas expedita vel, ducimus neque assumenda, necessitatibus! Eos est quas dolore fuga odio, soluta nulla totam tempora minima quis itaque sapiente ducimus veniam enim repellendus. Soluta earum consectetur voluptatum, quasi aperiam doloribus neque blanditiis, amet, odit vero, sit omnis.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, quod, mollitia! Ex sed magni veritatis pariatur facere hic necessitatibus aperiam. Necessitatibus doloribus molestias velit sequi expedita laudantium odio sunt nam ratione quibusdam animi consequatur vero quam eligendi veritatis voluptatum excepturi similique perferendis, suscipit facilis itaque, cum totam quasi. Corporis quis beatae neque tenetur, ullam quisquam itaque reprehenderit amet, provident praesentium ab velit laudantium debitis enim dignissimos iure magnam voluptatum! Reiciendis aut adipisci accusantium harum ratione quaerat maxime, cum non provident dolores. Unde id quod aliquam esse officia tenetur assumenda veniam deserunt consequuntur doloremque ducimus perferendis accusamus in dolorem animi magni, quisquam fugiat quasi quaerat voluptate repellendus molestiae excepturi blanditiis. Rerum excepturi quas expedita vel, ducimus neque assumenda, necessitatibus! Eos est quas dolore fuga odio, soluta nulla totam tempora minima quis itaque sapiente ducimus veniam enim repellendus. Soluta earum consectetur voluptatum, quasi aperiam doloribus neque blanditiis, amet, odit vero, sit omnis.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, quod, mollitia! Ex sed magni veritatis pariatur facere hic necessitatibus aperiam. Necessitatibus doloribus molestias velit sequi expedita laudantium odio sunt nam ratione quibusdam animi consequatur vero quam eligendi veritatis voluptatum excepturi similique perferendis, suscipit facilis itaque, cum totam quasi. Corporis quis beatae neque tenetur, ullam quisquam itaque reprehenderit amet, provident praesentium ab velit laudantium debitis enim dignissimos iure magnam voluptatum! Reiciendis aut adipisci accusantium harum ratione quaerat maxime, cum non provident dolores. Unde id quod aliquam esse officia tenetur assumenda veniam deserunt consequuntur doloremque ducimus perferendis accusamus in dolorem animi magni, quisquam fugiat quasi quaerat voluptate repellendus molestiae excepturi blanditiis. Rerum excepturi quas expedita vel, ducimus neque assumenda, necessitatibus! Eos est quas dolore fuga odio, soluta nulla totam tempora minima quis itaque sapiente ducimus veniam enim repellendus. Soluta earum consectetur voluptatum, quasi aperiam doloribus neque blanditiis, amet, odit vero, sit omnis.</p>
+    <p>Aspiring Graphic designer, Animator and Game Designer.</p>
   </div>
 
 </div>
