--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
 <a [routerLink]="['/']">
-  <h1>My Store</h1>
+  <h1></h1>
 </a>
 
 <div class="grid-x grid-margin-x">
@@ -100,6 +100,14 @@
       
       <a routerLink="/graphic" class="button fancy-button">
         <i class="material-icons">description</i>Graphic Design
+      </a>
+      
+    </li>
+
+     <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+      
+      <a routerLink="/photoshop" class="button fancy-button">
+        <i class="material-icons">description</i>photoshop
       </a>
       
     </li>
