final project done

--- a/src/app/graphic-design/photoshop/photoshop.component.html
+++ b/src/app/graphic-design/photoshop/photoshop.component.html
@@ -1,5 +1,7 @@
 <h3>Photoshop Portfolio</h3>
 
+
+
 <div class="simple-article-header">
   <!-- Article Published Date & Reading Time -->
   <p class="article-date-read"></p>
@@ -22,6 +24,72 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/uOUXDipWeN8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
+<div class="featured-image-block-grid">
+  <div class="featured-image-block-grid-header small-10 medium-8 large-7 columns text-center">
+ 
+ 
+ 
+    <h2>Favorite pieces</h2>
+    <p>Enjoy </p>
+  </div>
+  <div class="row large-up-4 small-up-2">
+    <div class="featured-image-block column">
+     <a href="#">
+        <img src="https://wallup.net/wp-content/uploads/2017/05/30/81754-women-face-profile-Adobe_Photoshop-artwork-smoke-abstract-fantasy_art-digital_art-paint_splatter-grunge-shapes.jpg" />
+        <p class="text-center featured-image-block-title"></p>
+      </a>
+    </div>
+    
+    <div class="featured-image-block column">
+     <a href="#">
+        <img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/f236b492-276d-40d1-ba9b-223b71bff550/d7qrpuy-4c3a334a-b53e-4550-bf6a-031b8938bdb4.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvZjIzNmI0OTItMjc2ZC00MGQxLWJhOWItMjIzYjcxYmZmNTUwXC9kN3FycHV5LTRjM2EzMzRhLWI1M2UtNDU1MC1iZjZhLTAzMWI4OTM4YmRiNC5qcGcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.YycnNTo7XpgteYK78UoEql1OnGSXM3g0yWQSaS1kkNQ" />
+        <p class="text-center featured-image-block-title"></p>
+      </a>
+    </div>
+    
+    <div class="featured-image-block column">
+     <a href="#">
+        <img src="https://i.pinimg.com/originals/eb/71/29/eb7129cd5aa978c6ace6da606441287b.jpg" />
+        <p class="text-center featured-image-block-title"></p>
+      </a>
+    </div>
+    
+    <div class="featured-image-block column">
+     <a href="#">
+        <img src="https://static.demilked.com/wp-content/uploads/2014/06/digital-art-photoshop-martin-de-pasquale-4.jpg" />
+        <p class="text-center featured-image-block-title"></p>
+      </a>
+    </div>
+    
+    <div class="featured-image-block column">
+     <a href="#">
+        <img src="https://1.bp.blogspot.com/-EWiWHhGt8Mk/XaHScav46iI/AAAAAAAAED0/eIh45GANoqE-fQTJUA-LkmxVc7IdAu21wCLcBGAsYHQ/s1600/The%2BPortal%2BFantasy%2BPhoto%2BManipulation%2BPhotoshop%2BTutorial.jpg" />
+        <p class="text-center featured-image-block-title"></p>
+      </a>
+    </div>
+  
+    <div class="featured-image-block column">
+     <a href="#">
+        <img src="https://assets.nst.com.my/images/articles/HoneyMoon.jpg_1511218087.jpg" />
+        <p class="text-center featured-image-block-title"></p>
+      </a>
+    </div>
+    
+    <div class="featured-image-block column">
+     <a href="#">
+        <img src="https://www.photoeditingindia.com/blogs/wp-content/uploads/2017/08/Photo-Editing-Companies-e1502268251340.jpg" />
+        <p class="text-center featured-image-block-title"></p>
+      </a>
+    </div>
+
+    <div class="featured-image-block column">
+     <a href="#">
+        <img src="https://varnasummer.com/wp-content/uploads/2015/02/optical-illusions-photo-manipulation-surreal-eric-johansson-16.jpg" />
+        <p class="text-center featured-image-block-title"></p>
+      </a>
+    </div>
+  </div>
+</div>
 
 
   
