--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -107,7 +107,7 @@
      <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
       
       <a routerLink="/photoshop" class="button fancy-button">
-        <i class="material-icons">description</i>photoshop
+        <i class="material-icons">description</i>Photoshop
       </a>
       
     </li>
